finished up forum and fixed mobile collapse of navbar

--- a/coffeepod/src/main/webapp/css/style.css
+++ b/coffeepod/src/main/webapp/css/style.css
@@ -53,6 +53,15 @@ html body {
   width: 50px;
 }
 
+ul {
+    list-style-type: none;
+    padding-left: 0px;
+}
+
+ul li {
+    padding: 1rem 0rem !important;
+}
+
 .orangeTextLight {
   color: #AA6231;
 }
